...
                    ))
                  ])
                ),
                TextButton(
                  onPressed: () => widget.onDateSelected(_selectedDate))
                  child: Text(
                    '확인')
                    style: Theme.of(context).textTheme.bodyLarge?.copyWith(
                      fontWeight: FontWeight.w600))
                    ))
              ])
            ),
          ))
...
